tests/libtracker-data/error/update-error-1.rq
INSERT {
	example:foo a example:A .
	example:foo rdf:value "foo" .
	example:foo rdf:nonexisting "bar" .
}
